--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,4 +17,27 @@
       <p class="article-content">{{ object.content }}</p>
     </div>
   </article>
+  <h2>Comments...</h2> 
+        {% if not post.comments.all %}
+          No comments yet...<a href="{% url 'add_comment' post.pk%}">
+          Add One</a>
+        <br/><br/><br/>
+        {% else %}
+        <a href="{% url 'add_comment' post.pk%}">Add comment</a>
+
+        <br/><br/>
+          {% for comment in post.comments.all %}
+            <strong>
+            {{ comment.name }} -
+            {{ comment.date_added}}
+
+            </strong>
+            <br/>
+            {{ comment.body }}
+          {% endfor%}
+          <br/><br/>
+          <a href="{% url 'add_comment' post.pk%}">Add comment</a>
+           <br/><br/>
+
+        {% endif %}
 {% endblock content %}
